--- a/pages/verify_email.html
+++ b/pages/verify_email.html
@@ -3,33 +3,33 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
     <title>S-Plan Email</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="/assets/css/loginForm.css">
-    <link rel="stylesheet" href="/assets/css/loading-dots.css">
+    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
+    <link href="/manifest.json" rel="manifest">
+    <link href="/assets/css/loginForm.scss" rel="stylesheet">
+    <link href="/assets/css/loading-dots.scss" rel="stylesheet">
 
 </head>
 
 <body style="background-color: rgba(0,0,0,0.8);color: rgb(0,0,0);">
-<div id="loginDiv" class="login-dark">
+<div class="login-dark" id="loginDiv">
     <form id="mainForm">
         <div id="waitingMessage">
             <p class="loading-dots"></p>
         </div>
         <div class="form-group" style="color: rgb(255,255,255); visibility: hidden">
-            <button id="submitButton" class="btn btn-primary btn-block" type="button" onclick="confirmTGLink()" disabled>Verknüpfen</button>
+            <button class="btn btn-primary btn-block" disabled id="submitButton" onclick="confirmTGLink()" type="button">Verknüpfen</button>
         </div>
     </form>
 </div>
 
 </body>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="/assets/js/databaseConnector.js"></script>
-<script src="/assets/js/apiConnector.js"></script>
-<script src="/assets/js/main.js"></script>
+<script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<script src="/assets/js/utilities/databaseConnector.ts"></script>
+<script src="/assets/js/utilities/apiConnector.ts"></script>
+<script src="/assets/js/main.ts"></script>
 
 </html>
