--- a/pages/login.html
+++ b/pages/login.html
@@ -61,7 +61,7 @@
 </div>
 <div class="login-dark" id="helpDiv" style="visibility: hidden;">
     <h2 class="sr-only">Login Form</h2>
-    <button class="btn btn-block" onClick="disableHelp();" style="height: 18;padding: 0;color: #6f7a85;font-size: 12px;visibility:inherit" type="button">Zurück zum Login<br/></button>
+    <button class="btn btn-block" onClick="disableHelp();" style="padding: 0;color: #6f7a85;font-size: 12px;visibility:inherit" type="button">Zurück zum Login<br/></button>
 </div>
 
 </body>
