--- a/reset.html
+++ b/reset.html
@@ -5,13 +5,14 @@
     <title>Reset</title>
 </head>
 <body>
-    <script>
-        window.localStorage.removeItem("token");
-        navigator.serviceWorker.getRegistrations().then(function(registrations) {
-            for(let registration of registrations) {
-                registration.unregister()
-            } })
-    </script>
+<script>
+    window.localStorage.removeItem("token");
+    navigator.serviceWorker.getRegistrations().then((registrations) => {
+        for (let registration of registrations) {
+            registration.unregister()
+        }
+    })
+</script>
 Reset erfolgt
 </body>
 </html>
