--- a/src/pages/student/index.html
+++ b/src/pages/student/index.html
@@ -54,7 +54,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="timeTable.html">Stundenplan</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../timeTable.html">Stundenplan</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="exams.html">Klausuren</a></li>
                     <li class="dropdown nav-item"><a aria-expanded="false" class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">Weitere Dienste</a>
                         <div class="dropdown-menu" role="menu">
