--- a/src/pages/student/exams.html
+++ b/src/pages/student/exams.html
@@ -48,7 +48,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="timeTable.html">Stundenplan</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../timeTable.html">Stundenplan</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Klausuren</a></li>
                     <li class="dropdown nav-item"><a aria-expanded="false" class="dropdown-toggle nav-link" data-toggle="dropdown" href="#">Weitere Dienste</a>
                         <div class="dropdown-menu" role="menu">
@@ -61,7 +61,7 @@
                 </ul>
                 <span class="navbar-text actions"></span>
             </div>
-            <a class="btn btn-light action-button" href="settings.html" role="button">Einstellungen</a>
+            <a class="btn btn-light action-button" href="../settings.html" role="button">Einstellungen</a>
         </div>
     </nav>
 </div>
