--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -58,7 +58,7 @@
             <input autocomplete="on" class="form-control" id="password" minlength="8" placeholder="Password" required="" type="password">
         </div>
         <div class="form-group" style="color: rgb(255,255,255);">
-            <button class="btn btn-primary btn-block" disabled id="loginButton" onclick="getApiKey()" type="button">Log In3</button>
+            <button class="btn btn-primary btn-block" disabled id="loginButton" onclick="getApiKey()" type="button">Log In</button>
         </div>
         <div class="form-group" style="color: rgb(255,255,255);">
             <button class="btn btn-primary btn-block" id="reloadButton" onclick="navigator.serviceWorker.getRegistrations().then(function(regs) {for(let reg of regs) {reg.unregister(); location.reload(true)}}).catch(function(err) {});" type="button">Neu laden</button>
