updated script location

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -36,13 +36,13 @@
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
     <link href="/S-Plan.png" rel="apple-touch-icon">
     <meta content="S-Plan" name="apple-mobile-web-app-title">
-    <link href="/assets/css/global.scss" rel="stylesheet">
+    <link href="/assets/css/global.css" rel="stylesheet">
 
 
     <title>S-Plan Login</title>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
     <link href="/manifest.json" rel="manifest">
-    <link href="/assets/css/loginForm.scss" rel="stylesheet">
+    <link href="/assets/css/loginForm.css" rel="stylesheet">
 
 </head>
 
@@ -88,13 +88,21 @@
 </div>
 
 </body>
+<!-- CDN -->
+<script src="https://cdn.jsdelivr.net/gh/emn178/hi-base32/build/base32.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="/assets/js/config.js"></script>
-<script src="/assets/js/utilities/serviceWorkerConnector.js"></script>
-<script src="/assets/js/utilities/apiConnector.js"></script>
-<script src="/assets/js/backgroundFunctions/login.js"></script>
-<script src="/assets/js/presentation/login.js"></script>
+<script crossorigin="anonymous" integrity="sha384-J7DIscqSIBfb9e7vk6Z6HUs+iizZghD0pZKKjwu6eoh1GR9dLMlMXNJLfGUNpN/z" src="https://cdn.rawgit.com/lrsjng/jquery-qrcode/v0.17.0/dist/jquery-qrcode.min.js"></script>
+
+<!-- SELF -->
+<script src="/assets/scripts/ServiceworkerConnector.js"></script>
+<script src="/assets/scripts/ApiConntector.js"></script>
+<script src="/assets/scripts/User.js"></script>
+<script src="/assets/scripts/DatabaseConnector.js"></script>
+<script src="/assets/scripts/Utilities.js"></script>
+<script src="/assets/scripts/Global.js"></script>
+<script src="/assets/scripts/login/Login.js"></script>
+<script src="/assets/scripts/login/loginPage.js"></script>
 
 </html>
