--- a/src/pages/linkTelegram.html
+++ b/src/pages/linkTelegram.html
@@ -33,9 +33,16 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
     <title>S-Plan Telegram connect</title>
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
-    <link href="/manifest.json" rel="manifest">
-    <link href="/assets/css/loginForm.scss" rel="stylesheet">
+    <!-- PWA -->
+    <link href="/manifest.webmanifest" rel="manifest">
+    <link href="/S-Plan.png" rel="apple-touch-icon">
+    <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
+    <meta content="S-Plan" name="apple-mobile-web-app-title">
+
+    <!-- Styling -->
+    <link href="/assets/ext/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/global.css" rel="stylesheet">
+    <link href="/assets/css/loginForm.css" rel="stylesheet">
 
 </head>
 
@@ -53,9 +60,15 @@
 
 </body>
 <script>loginRedirect = "/pages/linkTelegram.html?token=" + new URL(window.location.href).searchParams.get("token")</script>
+<!-- CDN
 <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+-->
+<script src="/assets/ext/jquery-3.3.1.slim.min.js"></script>
+<script src="/assets/ext/popper.min.js"></script>
+<script src="/assets/ext/bootstrap.min.js"></script>
+<!-- SELF -->
 <script src="/assets/js/utilities/serviceWorkerConnector.ts"></script>
 <script src="/assets/js/utilities/apiConnector.ts"></script>
 <script src="/assets/js/main.ts"></script>
