--- a/src/pages/student/exams.html
+++ b/src/pages/student/exams.html
@@ -32,9 +32,16 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
-    <title>S-Plan</title>
-    <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
-    <link href="/manifest.json" rel="manifest">
+    <title>S-Plan Klausuren</title>
+    <!-- PWA -->
+    <link href="/manifest.webmanifest" rel="manifest">
+    <link href="/S-Plan.png" rel="apple-touch-icon">
+    <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
+    <meta content="S-Plan" name="apple-mobile-web-app-title">
+
+    <!-- Styling -->
+    <link href="/assets/ext/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/global.css" rel="stylesheet">
 </head>
 
 <body>
@@ -69,15 +76,21 @@
     <ul class="list-group" id="mainUL">
     </ul>
 </div>
-
+<!-- CDN
 <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="/assets/js/utilities/databaseConnector.js"></script>
-<script src="/assets/js/utilities/apiConnector.js"></script>
-<script src="/assets/js/utilities/serviceWorkerConnector.js"></script>
-<script src="/assets/js/main.js"></script>
-<script src="/assets/js/presentation/klausuren.js"></script>
+-->
+<script src="/assets/ext/jquery-3.3.1.slim.min.js"></script>
+<script src="/assets/ext/popper.min.js"></script>
+<script src="/assets/ext/bootstrap.min.js"></script>
+<!-- SELF -->
+<script src="/assets/scripts/ServiceworkerConnector.js"></script>
+<script src="/assets/scripts/ApiConnector.js"></script>
+<script src="/assets/scripts/User.js"></script>
+<script src="/assets/scripts/DatabaseConnector.js"></script>
+<script src="/assets/scripts/Utilities.js"></script>
+<script src="/assets/scripts/Global.js"></script>
 
 </body>
 
