--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -282,6 +282,7 @@
 <script src="/assets/scripts/DatabaseConnector.js"></script>
 <script src="/assets/scripts/Utilities.js"></script>
 <script src="/assets/scripts/Global.js"></script>
+<script src="/assets/scripts/settings/Notifications.js"></script>
 <script src="/assets/scripts/settings/Settings.js"></script>
 <script src="/assets/scripts/settings/settingsPage.js"></script>
 </body>
